alignment fixes for donate & main pages

--- a/css/donate.css
+++ b/css/donate.css
@@ -55,10 +55,6 @@
 }
 .hero-information {
   margin-top: 200px;
-<<<<<<< HEAD
-  /*ADDED THIS*/
-=======
->>>>>>> f921f16dac4822b8f635bab36544e8ff1c553b77
   position: relative;
   z-index: 3;
   animation: wait 600ms, fade-in 800ms 600ms;
@@ -66,18 +62,9 @@
 }
 
 .hero-information .hero-logo {
-<<<<<<< HEAD
-  margin-top: -240px;
-  /*ADDED THIS*/
-=======
   margin-top: -200px;
-<<<<<<< HEAD
->>>>>>> f921f16dac4822b8f635bab36544e8ff1c553b77
-  margin-bottom: 15px; }
-=======
   margin-bottom: 15px;
 }
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
 
 @media only screen and (max-width: 767px) {
   .hero-information {
@@ -134,7 +121,6 @@
   }
 }
 @media only screen and (min-width: 1400px) {
-<<<<<<< HEAD
   .hero-action {
     padding-top: 350px;
   }
@@ -173,52 +159,10 @@
     padding-top: 55px;
   }
 
-<<<<<<< HEAD
-=======
-  .hero-action {
-    padding-top: 350px; } }
-
-.hero-action .big-donate-btn {
-  font-family: DINPro;
-  font-size: 175%;
-  font-weight: bold;
-  color: #fff;
-  position: relative;
-  z-index: 2; }
-
-@media only screen and (max-width: 767px) {
-  .hero-action .big-donate-btn {
-    font-family: DINPro;
-    font-size: 125%;
-    width: 145px;
-    height: 40px;
-    font-weight: bold;
-    color: #fff; } }
-
-.hero-action .hero-learn {
-  color: #b6a1c4;
-  font-size: 150%; }
-
-@media only screen and (max-width: 767px) {
-  .hero-action .hero-learn {
-    font-size: 115%; } }
-
-@media only screen and (max-width: 991px) {
-  /*.hero-information .hero-logo {
-    margin-top: 10px;
-  }*/
-  .hero-information .hero-logo {
-    padding-top: 100px; }
-  .hero-action {
-    padding-top: 120px; } }
-
->>>>>>> f921f16dac4822b8f635bab36544e8ff1c553b77
-=======
   .hero-action {
     padding-top: 120px;
   }
 }
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
 @media only screen and (max-width: 767px) {
   .hero-information .hero-logo {
     margin-top: 225px;
@@ -250,17 +194,6 @@
 
   .hero-information #theme-logo {
     width: 40vw;
-<<<<<<< HEAD
-<<<<<<< HEAD
-    min-width: 120px; } 
-  .hero-action{
-    margin-top: -300px;
-  }}
-=======
-    min-width: 120px; } }
->>>>>>> f921f16dac4822b8f635bab36544e8ff1c553b77
-
-=======
     min-width: 120px;
   }
 
@@ -269,7 +202,6 @@
     margin-right: 3%;
   }
 }
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
 /*HERO SECTION ENDS*/
 .donate-button {
   text-align: center;
@@ -429,13 +361,8 @@ h2 {
 
 .donate-questions {
   background-color: white;
-<<<<<<< HEAD
-  padding-top: 3%; 
-  margin-bottom: -30px;}
-=======
   padding-top: 3%;
 }
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
 
 #email-link-donate:hover {
   opacity: 75%;
@@ -546,10 +473,6 @@ h2 {
     font-size: 120%;
   }
 
-<<<<<<< HEAD
-
-
-=======
   .donate-btn {
     font-size: 100%;
   }
@@ -558,7 +481,6 @@ h2 {
     margin-top: 20px;
   }
 }
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
 @media only screen and (max-width: 767px) {
   /* impact section */
   .donate-impact {
@@ -604,18 +526,8 @@ h2 {
   }
 
   .contact-footer {
-<<<<<<< HEAD
-    margin-top: -30px; }
-  .donate-impact {
-<<<<<<< HEAD
-    padding-top: 10%; } }
-=======
-    padding-top: 15%; } }
->>>>>>> f921f16dac4822b8f635bab36544e8ff1c553b77
-=======
     margin-top: -30px;
   }
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
 
   .donate-impact {
     padding-top: 15%;
@@ -623,12 +535,6 @@ h2 {
 }
 /* mobile */
 @media only screen and (max-width: 575px) {
-  .hero-action{
-    margin-top: -200;
-  }
-  .donate-impact{
-    padding-top: 125px;
-  }
   .story-header {
     text-align: center;
   }
@@ -640,13 +546,9 @@ h2 {
 
   /* impact section */
   .impact-header {
-<<<<<<< HEAD
-    font-size: 8vw; }
-=======
     font-size: 280%;
   }
 
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
   .donate-option1-header,
 .donate-option2-header,
 .donate-option3-header {
@@ -673,16 +575,10 @@ h2 {
 
   .donate-btn {
     margin-top: 20px;
-<<<<<<< HEAD
-    margin-bottom: 20px; }
-  .donate-questions{
-    padding-top: 25%;
-=======
     margin-bottom: 20px;
   }
 
   .donate-questions {
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
     margin-left: 2%;
     margin-right: 2%;
     font-size: 81%;
@@ -694,16 +590,6 @@ h2 {
   }
 
   .col-sm {
-<<<<<<< HEAD
-    padding-bottom: 5%; }
-  .footer{
-    padding-top: 35%;
-  }
-  .contact-footer{
-    margin-top: 10%;
-  }
-  }
-=======
     padding-bottom: 5%;
   }
 }
@@ -757,4 +643,19 @@ h2 {
 }
 
 /*# sourceMappingURL=donate.css.map */
->>>>>>> 30fbcc76dfa7f6b8953ccf8a395ffd8622114ea3
+
+@media only screen and (min-width: 2000px){
+  .hero-clouds #hero-clouds {
+    height: 1200px;
+  }
+  .hero .container {
+    margin-left: 25%;
+  } 
+  .hero-logo #technica-logo {
+    margin-top: 18%;
+    width: 870px;
+  }
+  .hero-action .big-donate-btn{
+    width: 20%;
+  }
+}
