--- a/css/main.css
+++ b/css/main.css
@@ -651,7 +651,7 @@ body {
 @media (max-width: 575px) {
   .footer {
     font-size: 0.9rem;
-    adding: 0.5rem 0rem;
+    padding: 0.5rem 0rem;
   }
 }
 
@@ -662,3 +662,53 @@ body {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+@media only screen and (max-width: 400px){
+  .hero{
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px){
+  .hero{
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (width: 1024px){
+  .hero-clouds #hero-clouds{
+    position: relative;
+    height: 700px;
+  }
+}
+/*# sourceMappingURL=main.css.map */
+
+@media only screen and (min-width: 2000px){
+  .hero{
+    padding-bottom: 10%;
+  }
+  .hero-logo #technica-logo{
+    height: 280px;
+    width: 1050px;
+  }
+  .hero-information {
+    margin-top: 50px;
+  }
+  .hero .container {
+    margin-left: -10px;
+    padding-left: 200px;
+  }
+  .hero-information #hero-tagline{
+    font-size: 300%;
+    width: 100%;
+  }
+  .hero-action .register-btn {
+    margin-left: 100%;
+    width: 35%;
+    height: 50%;
+  }
+  .hero-action .hero-learn {
+    margin-left: 68%;
+    width: 100%;
+  }
+} 
